# mp

./: .dockerignore  .env.development  .env.example  .env.production  .eslintignore  .eslintrc.js  .gitignore  .knip.json  .ls-lint.yml  .npmrc  .oxlintrc.json  .prettierignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.db-migrations  Dockerfile.devtools  Dockerfile.proxy  GELDATA_MIGRATION_SUMMARY.md  MIGRATION_COMPLETE.md  agents.md  deno.json  docker-compose.yaml  eslint.config.js  eslint.config.mjs  oxlintrc.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  production-build-args.env  prometheus.yml  proxy-entrypoint.sh  readme.md  tsconfig.json  turbo.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: build.yml  build_and_deploy.yml  build_and_test.yml  build_test_deploy.yml  commitlint.yml  copilot-setup-steps.yml  docker_cleanup.yml  test_build_deploy.yml
.husky/: commit-msg
apps/api/: package.json
apps/api-server/: drizzle.config.js  esbuild.ts  package.json  tsconfig.json
apps/api-service/: bundle.ts  esbuild.ts  package.json  readme.md  tsconfig.json
apps/area-server/: esbuild.ts  package.json  seed.ts
apps/client/: .env  .env.development  deno.json  index.html  package.json  readme.md  tsconfig.json  vite.config.mjs  vite.config.real.ts  vite.config.ts
apps/db/: package.json  readme.md  tsconfig.json
apps/e2e/: deno.json  package.json  playwright.config.ts  readme.md  tsconfig.json
apps/game/: index.ts  package.json  readme.md  rpc.slice.ts  tsconfig.json
apps/game-server/: package.json  readme.md  tsconfig.json  vite.config.ts
apps/game-service/: bundle.ts  esbuild.ts  package.json  readme.md  run-dev-for-all-areas.ts  tsconfig.json
apps/gateway/: package.json
apps/graphql/: gql-tada.generated.d.ts  package.json  tsconfig.json
apps/loadtest/: deno.json  package.json  readme.md  tsconfig.json  vite.config.ts
apps/mp-client/: .gitignore  Cargo.toml
apps/mp-client/src/: lib.rs
apps/mp-server/: Cargo.toml
apps/mp-server/src/: main.rs
apps/server/: .env  .env.development  deno.json  drizzle.config.js  drizzle.config.ts  esbuild.ts  keycloak-provision.ts  package.json  readme.md  run-dev-for-all-areas.ts  seed.ts  tsconfig.json  tsup.config.mjs  tsup.config.ts  vite.config.ts
apps/website/: .gitignore  index.html  package.json  readme.md  tsconfig.json  tsr.config.json  tsr.generate.ts  vite.config.ts
client/: Cargo.toml
client/src/: lib.rs
crates/mp-auth/: Cargo.toml
crates/mp-db/: Cargo.toml
crates/mp-game/: Cargo.toml
crates/mp-logger/: Cargo.toml
crates/mp-math/: Cargo.toml
crates/mp-rpc/: Cargo.toml
crates/mp-rpc/src/: lib.rs
crates/mp-std/: Cargo.toml
crates/mp-std/src/: assert.rs  collections.rs  function_composition.rs  lib.rs  random.rs  short_id.rs  types.rs  uuid.rs
crates/mp-time/: Cargo.toml
docker/: .dockerignore  .env  .env.dev  .env.example  .env.prod  .env.shared  .env.test  CACHE_OPTIMIZATION.md  Caddyfile  Dockerfile.caddy  Dockerfile.fail2ban  Dockerfile.keycloak  Dockerfile.keycloak-provision  Dockerfile.migrations  Dockerfile.mp  Dockerfile.mp-api-server  Dockerfile.mp-area-server  Dockerfile.mp-client  Dockerfile.mp-client-dev  Dockerfile.mp-client-prod  Dockerfile.mp-client.dev  Dockerfile.mp-dev  Dockerfile.mp-game-service  Dockerfile.mp-gateway  Dockerfile.mp-migrations  Dockerfile.mp-node-app  Dockerfile.mp-prod  Dockerfile.mp-server  Dockerfile.mp-server-dev  Dockerfile.mp-server-prod  Dockerfile.mp-server-rust  Dockerfile.mp-server.dev  Dockerfile.mp-test  Dockerfile.mp-website  FAIL2BAN.md  docker-compose.base.yaml  docker-compose.dev.yaml  docker-compose.mp.yaml  docker-compose.new.yaml  docker-compose.override.yaml  (+17 more)
docker/caddy/: Caddyfile  Caddyfile.dev  Caddyfile.prod  base.Caddyfile  dev.Caddyfile  prod.Caddyfile  test.Caddyfile
docker/fail2ban/: fail2ban.conf
docker/file-server/: Caddyfile
docker/grafana/: alloy.alloy  loki.yaml  mimir.yaml  pyroscope.yaml  tempo.yaml
docker/nginx/: http.conf
docker/reverse-proxy/: Caddyfile
docs/: example-deployment.yml  horizontal-scaling.md  test-area-server-registry.js  test-deployment.sh
grafana/dashboards/: node_exporter.json
integrations/db/: FILES_TO_MIGRATE.md  MIGRATION_GUIDE.md  README.md  docker-compose.gel.yaml  drizzle.config.ts  drop.ts  electric-investigation.md  gel.toml  migrate-safe.ts  ormconfig.ts  package.json  readme.md  seed.ts  tsconfig.json
integrations/db-client/: drizzle.config.ts  package.json  seed.ts
integrations/experiment/: package.json
integrations/fixtures/: package.json
integrations/game/: package.json
integrations/game-client/: package.json
integrations/game-shared/: package.json
integrations/keycloak/: bundle.ts  esbuild.ts  package.json  tsconfig.json  vite.config.ts
integrations/keycloak-client/: esbuild.ts  package.json  tsconfig.json
integrations/redis/: package.json  tsconfig.json
integrations/redis-client/: package.json
integrations/world/: package.json  tsconfig.json
libraries/auth/: client.ts  package.json  server.ts  shared.ts
libraries/data/: package.json
libraries/db/: package.json
libraries/encoding/: package.json
libraries/encoding-graph/: package.json
libraries/engine/: package.json
libraries/env/: package.json
libraries/eslint/: db-rules.mjs  eslint.config.js  index.mjs  package.json  tsconfig.json
libraries/event-bus/: package.json
libraries/event-router/: package.json  readme.md
libraries/game/: index.ts  package.json  rpc.slice.ts  rpc.ts  tsconfig.json
libraries/graphics/: package.json  readme.md
libraries/index/: package.json  readme.md
libraries/injector/: package.json
libraries/invocation-proxy/: package.json  readme.md
libraries/ioc/: package.json  readme.md
libraries/keycloak-provision/: readme.md
libraries/logger/: package.json  readme.md
libraries/math/: readme.md
libraries/patch-tracker/: package.json
libraries/sync/: wss.ts  (+9 more)
nginx/: http.conf  root_top.conf  server_proxy.conf
server/: Cargo.toml
server/src/: config.rs  main.rs  websocket.rs
(+1975 files in other folders)
