[workspace]
resolver = "2"
members = [
    "server",
    "client", 
    "crates/*"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["kasper573"]
license = "MIT"

[workspace.dependencies]
# Web frameworks
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Frontend (WASM)
leptos = { version = "0.6", features = ["csr"] }
leptos_axum = "0.6"
wasm-bindgen = "0.2"

# Additional dependencies
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9.3"
async-trait = "0.1"