[package]
name = "mp-client"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos.workspace = true
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
web-sys = { version = "0.3", features = [
  "console",
  "WebSocket",
  "MessageEvent",
  "Event",
  "ErrorEvent",
  "CloseEvent",
] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3"

# Internal crates (compiled for WASM)
mp-game = { path = "../crates/mp-game" }