[package]
name = "mp-server"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
dotenvy.workspace = true

# Internal crates
mp-logger = { path = "../crates/mp-logger" }
mp-auth = { path = "../crates/mp-auth" }
mp-rpc = { path = "../crates/mp-rpc" }
mp-game = { path = "../crates/mp-game" }
mp-db = { path = "../crates/mp-db" }
futures-util = "0.3"