[package]
name = "mp-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
mp-std = { path = "../mp-std" }

[dev-dependencies]
pretty_assertions = { workspace = true }